Update gradle flags